--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 html{
     box-sizing: border-box;
     height: 100%;
+    scroll-behavior: smooth;
 }
 *,
 *::before,
@@ -10,12 +11,49 @@ html{
 body{
     padding: 0;
     margin: 0;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 28px;
 }
 .container{
     width: 100%;
-    max-width: 1250px;
-    padding-left: 25px;
-    padding-bottom: 25px;
+    max-width: 1400px;
+    padding-left: 20px;
+    padding-right: 20px;
     margin-left: auto;
     margin-right: auto;
+}
+img{
+    max-width: 100%;
+    height: auto;
+}
+
+
+/* Header */
+.site-header-container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.logo-img {
+    display: block;
+}
+.site-nav-list {
+    display: flex;
+    align-items: center;
+    list-style: none;
+}
+
+.list-item:not(:last-child) {
+    margin-right: 40px;
+}
+
+.list-item-link {
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 12px;
+    line-height: auto;
+    letter-spacing: 1px;
 }
