--- a/css/style.css
+++ b/css/style.css
@@ -34,8 +34,8 @@ body{
     color: var(--text-color);
 }
 *:focus{
-    outline: 2px solid var(--outline-color);
-    outline-offset: 2px;
+    outline: 2px dashed var(--outline-color);
+    outline-offset: 3px;
 }
 .container{
     width: 100%;
@@ -366,6 +366,90 @@ img{
 }
 
 
+/* How_It_Works */
+.how-it-works-inner {
+    padding: 50px 30px;
+    background-color: var(--accent-color-green);
+    background-image: url(../Images/green-bg.jpg);
+    text-align: center;
+}
+
+.how-it-works-heading {
+    margin-top: 0;
+    margin-bottom: 80px;
+    color: #fff;
+    font-size: 50px;
+    line-height: normal;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+.how-it-works-list {
+    display: flex;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    margin-bottom: 60px;
+    margin-left: -20px;
+    text-align: left;
+    counter-reset: how-it-works;
+}
+
+.how-it-works-item {
+    display: flex;
+    flex-direction: column;
+    width: calc(100% / 3 - 20px);
+    margin-left: 20px;
+    text-align: left;
+    counter-increment: how-it-works;
+}
+
+.how-it-works-item::before{
+    width: 60px;
+    height: 60px;
+    border: 4px solid var(--accent-color-light-brown);
+    background-color: #f8f8f2;
+    content: "";
+    margin-bottom: 20px;
+}
+
+.how-it-works-info {
+    display: flex;
+    flex-grow: 1;
+    flex-direction: column;
+    padding: 20px 20px 40px;
+    background-color: #f8f8f2;
+}
+
+.how-it-works-info::before{
+    align-self: flex-end;
+    margin-top: 0;
+    margin-bottom: 45px;
+    font-size: 64px;
+    line-height: normal;
+    content: "0"counter(how-it-works);
+}
+
+.how-it-works-title {
+    margin-top: 0;
+    margin-bottom: 13px;
+    font-size: 40px;
+    line-height: normal;
+    font-weight: 500;
+    text-transform: uppercase;
+}
+
+.how-it-works-text {
+    margin: 0;
+    font-size: 18px;
+    line-height: 28px;
+}
+
+.how-it-works-btn-cta:focus{
+    outline: 2px dashed var(--accent-color-light-brown);
+}
+
+
 /* Retina-Bg */
 @media only screen and (-webkit-min-device-pixel-ratio: 2),
 only screen and (min--moz-device-pixel-ratio: 2),
@@ -381,5 +465,8 @@ only screen and (min-resolution: 2dppx) {
     }
     .index-features-inner{
         background-image: url(../Images/index-features-bg@2x.jpg);
+    }
+    .how-it-works-inner{
+        background-image: url(../Images/green-bg@2x.jpg);
     }
 }
